syntax = "proto3";

option csharp_namespace = "GrpcUserRequest";

package UserRequest;

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUserRequest {
  string uuid = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UpdateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message DeleteUserRequest {
  string uuid = 1;
}